[tool.poetry]
name = "Outdated"
version = "1.0.0"
description = "Shows all added projects, and their packages, also indicates when a package is no longer supported."
authors = ["Adfinis AG"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.16"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
