[tool.poetry]
name = "outdated"
version = "0.0.0"
description = "Tool to show when Packages go out of lts and when to update to the new long term support version."
authors = ["Adfinis AG"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.16"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"
python-dateutil = "^2.8.2"
colour = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
