[tool.poetry]
name = "Outdated"
version = "1.0.0"
description = "Shows all added projects, and their packages, also indicates when a package is no longer supported."
authors = ["Adfinis AG"]
license = "GPL-3.0-or-later"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
djangorestframework-jsonapi = "^6.1.0"
django-filter = "^23.3"
gunicorn = "^20.1.0"
semver = "^3.0.0"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
# pyaml = "^21.10.1"
mozilla-django-oidc = "^3.0.0"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
flake8 = "5.0.0"
flake8-bugbear = "23.1.20"
flake8-debugger = "4.1.2"
flake8-tuple = "0.4.1"
flake8-isort = "5.0.3"
flake8-docstrings = "1.6.0"
flake8-string-format = "0.3.0"
black = "22.12.0"
pytest-django = "4.5.2"
pytest = "7.4.2"
isort = "5.12.0"
pytest-factoryboy = "2.6.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.11.1"
pytest-vcr = "^1.0.2"
pdbpp = "^0.10.3"
requests-mock = "^1.10.0"
django-extensions = "^3.2.3"
ipdb = "^0.13.13"


[tool.isort]
skip = [
  "migrations",
]
known_first_party = ["outdated"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "outdated.settings"
addopts = "--create-db --vcr-record=once"

[tool.coverage.run]
source = ["."]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "pragma: todo cover",
    "def __str__",
    "def __unicode__",
    "def __repr__",
]
omit = [
    "*/migrations/*",
    "*/apps.py",
    "manage.py",
    "outdated/wsgi.py",
    "pdbrc.py"
]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
